--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h3>I am a component</h3>
 <hr>
-<app-server></app-server>
+<app-servers></app-servers>
+<!--<app-sucess-alert></app-success-alert>
+<app-warning-alert></app-warning-alert>-->
 
