--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,7 +2,7 @@
 <input
 type="text"
 class="form-control"
-[(ngmodel)] = "serverName">
+//[(ngmodel)] = "serverName">
 <p>{{serverName}}</p>
 <button class="btn btn-primary" [disabled]="allowNewServer" {click}="onCreateServer()">Add Server</button>
 <p>{{serverCreationStatus}}</p>
