Update Angular version

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,10 +2,10 @@
 <input
 type="text"
 class="form-control"
-//[(ngmodel)] = "serverName">
+[(ngModel)] = "serverName">
 <p>{{serverName}}</p>
 <button class="btn btn-primary" [disabled]="allowNewServer" {click}="onCreateServer()">Add Server</button>
 <p>{{serverCreationStatus}}</p>
 <app-server></app-server>
-<app-server></app-server>
+
 
